# product_api/data/validation.go
@@ -1,0 +1,85 @@
+package data
+
+import (
+	"fmt"
+	"github.com/go-playground/validator"
+	"regexp"
+)
+
+// ValidationError wraps the validators FieldError so we do not
+// expose this to out code
+// ValidationError обертывает валидаторы FieldError, поэтому мы не
+// выставляем это в код
+type ValidationError struct {
+	validator.FieldError
+}
+
+func (v ValidationError) Error() string {
+	return fmt.Sprint(
+		"Key: '%s' Error: Field validation for '%s' failed on the '%s' tag",
+		v.Namespace(),
+		v.Field(),
+		v.Tag(),
+	)
+}
+
+// ValidationErrors is a collection of ValidationError
+// ValidationErrors - это коллекция ValidationError
+type ValidationErrors []ValidationError
+
+// Errors converts the slice into a string slice
+// Errors преобразует срез в срез строк
+func (v ValidationErrors) Errors() []string {
+	errs := []string{}
+	for _, err := range v {
+		errs = append(errs, err.Error())
+	}
+
+	return errs
+}
+
+// Validation contains
+// Validation содержит
+type Validation struct {
+	validate *validator.Validate
+}
+
+// NewValidation creates a new Validation type
+// NewValidation создает новый тип Validation
+func NewValidation() *Validation {
+	validate := validator.New()
+	validate.RegisterValidation("sku", validateSKU)
+
+	return &Validation{validate}
+}
+
+func (v *Validation) Validate(i interface{}) ValidationErrors {
+	errs := v.validate.Struct(i).(validator.ValidationErrors)
+
+	if len(errs) == 0 {
+		return nil
+	}
+
+	var returnErrs []ValidationError
+	for _, err := range errs {
+		// cast the FieldError into ValidationError and append to the slice
+		// отправляем FieldError в ValidationError и добавляем в срез
+		ve := ValidationError{err.(validator.FieldError)}
+		returnErrs = append(returnErrs, ve)
+	}
+
+	return returnErrs
+}
+
+// validateSKU
+func validateSKU(fl validator.FieldLevel) bool {
+	// SKU must be in the format abc-abc-abc
+	re := regexp.MustCompile(`[a-z]+-[a-z]+-[a-z]+`)
+	sku := re.FindAllString(fl.Field().String(), -1)
+
+	if len(sku) == 1 {
+		return true
+	}
+
+	return false
+}
