# product_api/swagger.yaml
@@ -2,10 +2,22 @@ basePath: /
 consumes:
 - application/json
 definitions:
+  GenericError:
+    description: |-
+      GenericError is a generic error message returned by a server
+      GenericError - это общее сообщение об ошибке, возвращаемое сервером
+    properties:
+      message:
+        type: string
+        x-go-name: Message
+    type: object
+    x-go-package: github.com/alonelegion/go_microservices/product_api/handlers
   Product:
     description: Product defines the structure for an API product
     properties:
       description:
+        description: the description for this product
+        maxLength: 10000
         type: string
         x-go-name: Description
       id:
@@ -15,22 +27,42 @@ definitions:
         type: integer
         x-go-name: ID
       name:
+        description: the name for this product
+        maxLength: 255
         type: string
         x-go-name: Name
       price:
+        description: the price for the product
         format: float
+        minimum: 0.01
         type: number
         x-go-name: Price
       sku:
+        description: the SKU for the product
+        pattern: '[a-z]+-[a-z]+-[a-z]+'
         type: string
         x-go-name: SKU
     required:
-    - id
+    - name
+    - price
+    - sku
     type: object
     x-go-package: github.com/alonelegion/go_microservices/product_api/data
+  ValidationError:
+    description: |-
+      ValidationError is a collection of validation error messages
+      ValidationError - это набор сообщений об ошибках валидации
+    properties:
+      messages:
+        items:
+          type: string
+        type: array
+        x-go-name: Messages
+    type: object
+    x-go-package: github.com/alonelegion/go_microservices/product_api/handlers
 info:
   description: Documentation for Product API
-  title: Product API.
+  title: of Product API
   version: 1.0.0
 paths:
   /products:
@@ -42,21 +74,104 @@ paths:
           $ref: '#/responses/productsResponse'
       tags:
       - products
-  /products/{id}:
-    delete:
-      description: Return a list of products from the database
-      operationId: deleteProducts
+    post:
+      description: |-
+        response:
+        200: productResponse
+        422: errorValidation
+        501: errorResponse
+      operationId: createProduct
+      parameters:
+      - description: |-
+          Product data structure to Update or Create.
+          Note: the id field is ignored by update and create operations
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/Product'
+      summary: Create a new product
+      tags:
+      - products
+    put:
+      description: Update a products details
+      operationId: updateProduct
+      parameters:
+      - description: |-
+          Product data structure to Update or Create.
+          Note: the id field is ignored by update and create operations
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/Product'
       responses:
         "201":
-          $ref: '#/responses/noContent'
+          $ref: '#/responses/noContentResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+        "422":
+          $ref: '#/responses/errorValidation'
+      tags:
+      - products
+  /products/{id}:
+    delete:
+      description: Update a products details
+      operationId: deleteProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "201":
+          $ref: '#/responses/noContentResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+        "501":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - products
+    get:
+      description: Return a list of products from the database
+      operationId: listSingleProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "200":
+          $ref: '#/responses/productResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
       tags:
       - products
 produces:
 - application/json
 responses:
-  noContent: {}
+  errorResponse:
+    description: Generic error message returned as a string
+    schema:
+      $ref: '#/definitions/GenericError'
+  errorValidation:
+    description: Validation errors defined as an array of strings
+    schema:
+      $ref: '#/definitions/ValidationError'
+  noContentResponse:
+    description: No content is returned by this API endpoint
+  productResponse:
+    description: Data structure representing a single product
+    schema:
+      $ref: '#/definitions/Product'
   productsResponse:
-    description: A list of products return in the response
+    description: A list of products
     schema:
       items:
         $ref: '#/definitions/Product'
